data/all_generated_tests/raw_wast_tests/nop_StackCorruption_148.wast
;; 9. **Test Description**:    Place `nop` within a recursive function that modifies the stack with operand values and returns. Check the stack state after each recursive call to ensure consistency.    **Constraint Checked**: Ensures `nop` within recursion doesn’t corrupt the stack.    **Relation to Stack Corruption**: Recursive stack operations are vulnerable to corruption if `nop` is mismanaged.

(assert_invalid
  (module (func $recurse (result i32)
    (local $x i32)
    (local.set $x (i32.const 1))
    (nop)
    (if (i32.lt_s (local.get $x) (i32.const 10))
      (then
        (local.set $x (i32.add (local.get $x) (call $recurse)))
      )
    )
    (local.get $x)
  ))
  "type mismatch"
)